# study-django

./: .gitignore  Dockerfile  README.md  compose.yml  pyproject.toml  time.sh
.devcontainer/: devcontainer.json
mysite/: entrypoint.sh  manage.py  pyproject.toml
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  database.py  models.py  urls.py  views.py
mysite/polls/migrations/: 0001_initial.py
