[tool.poetry]
name = "study-django"
version = "0.1.0"
description = ""
authors = ["ktny <katsunori.t10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
