[tool.poetry]
name = "study-django"
version = "0.1.0"
description = ""
authors = ["ktny <katsunori.t10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.3"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
uvicorn = "^0.19.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
mypy = "^0.990"
isort = "^5.10.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
