[tool.poetry]
name = "study-django"
version = "0.1.0"
description = ""
authors = ["ktny <katsunori.t10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.3"
psycopg2 = "^2.9.5"
gunicorn = "^20.1.0"
uvicorn = "^0.19.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.10.1"
django-stubs = {extras = ["compatible-mypy"], version = "^1.14.0"}
pyproject-flake8 = "^6.0.0.post1"

[tool.black]
line-length = 120
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.cache
    | \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | buck-out
    | build
    | dist
    | docs
    | migrations
  )/
)
'''

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,"
max-complexity = 10

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "mysite.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
